// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders a selected tab correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  border-style: solid;
  border-color: #0a68c1;
}

.emotion-1 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-12px/2);
  margin-right: calc(-12px/2);
}

<div
    class="emotion-2"
  >
    <button
      class="emotion-1"
      data-testid="tab"
      role="tab"
      type="button"
    >
      <div
        class="emotion-0"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab renders disabled tab 1`] = `
<DocumentFragment>
  .emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: not-allowed;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #e4e4e4;
  color: #c0c0c0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 svg {
  fill: #c0c0c0;
}

<div
    class="emotion-4"
  >
    <button
      class="emotion-3"
      data-testid="tab"
      disabled=""
      role="tab"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <span
            class="emotion-0"
          >
            Tab Label
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab renders label and icon with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 svg {
  fill: #2e2e2e;
}

.emotion-5:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-5:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-5:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-5:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-5:disabled svg {
  fill: #c0c0c0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-0 {
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 48px;
  height: 48px;
}

<div
    class="emotion-6"
  >
    <button
      class="emotion-5"
      data-testid="tab"
      role="tab"
      type="button"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-1"
        >
          <svg
            aria-hidden="true"
            class="emotion-0"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
          </svg>
        </div>
        <div
          class="emotion-1"
        >
          <span
            class="emotion-2"
          >
            Tab Label
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab renders label with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 svg {
  fill: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-3:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-3:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-3:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-3:disabled svg {
  fill: #c0c0c0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-4"
  >
    <button
      class="emotion-3"
      data-testid="tab"
      role="tab"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <span
            class="emotion-0"
          >
            Tab Label
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab renders large tab 1`] = `
<DocumentFragment>
  .emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 64px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-3 svg {
  width: 32px;
  height: 32px;
}

.emotion-3 svg {
  fill: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-3:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-3:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-3:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-3:disabled svg {
  fill: #c0c0c0;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<div
    class="emotion-4"
  >
    <button
      class="emotion-3"
      data-testid="tab"
      role="tab"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <span
            class="emotion-0"
          >
            Tab Label
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab renders small tab 1`] = `
<DocumentFragment>
  .emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 80px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3 svg {
  fill: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-3:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-3:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-3:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-3:disabled svg {
  fill: #c0c0c0;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.4833333333333334em + 1px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: calc(-0.5458333333333334em + -0.5px);
}

<div
    class="emotion-4"
  >
    <button
      class="emotion-3"
      data-testid="tab"
      role="tab"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <span
            class="emotion-0"
          >
            Tab Label
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab renders with a leading icon and custom iconSize 1`] = `
<DocumentFragment>
  .emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-0 {
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-5 svg {
  width: 48px;
  height: 48px;
}

.emotion-5 svg {
  fill: #2e2e2e;
}

.emotion-5:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-5:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-5:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-5:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-5:disabled svg {
  fill: #c0c0c0;
}

<div
    class="emotion-6"
  >
    <button
      class="emotion-5"
      data-testid="tab"
      role="tab"
      type="button"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-1"
        >
          <svg
            aria-hidden="true"
            class="emotion-0"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
          </svg>
        </div>
        <div
          class="emotion-1"
        >
          <span
            class="emotion-2"
          >
            Tab Label
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab renders with a trailing icon and custom spacing between elements 1`] = `
<DocumentFragment>
  .emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 svg {
  fill: #2e2e2e;
}

.emotion-5:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-5:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-5:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-5:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-5:disabled svg {
  fill: #c0c0c0;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-2 {
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-2.emotion-2 {
  width: 48px;
  height: 48px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-12px/2);
  margin-right: calc(-12px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(12px/2);
  margin-right: calc(12px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-1 {
    max-width: 100%;
  }
}

<div
    class="emotion-6"
  >
    <button
      class="emotion-5"
      data-testid="tab"
      role="tab"
      type="button"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-1"
        >
          <span
            class="emotion-0"
          >
            Tab Label
          </span>
        </div>
        <div
          class="emotion-1"
        >
          <svg
            aria-hidden="true"
            class="emotion-2"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab renders with different minHeight 1`] = `
<DocumentFragment>
  .emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 64px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 svg {
  fill: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-3:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-3:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-3:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-3:disabled svg {
  fill: #c0c0c0;
}

<div
    class="emotion-4"
  >
    <button
      class="emotion-3"
      data-testid="tab"
      role="tab"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <span
            class="emotion-0"
          >
            Tab Label
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tab should render custom aria-label tab 1`] = `
<DocumentFragment>
  .emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 svg {
  fill: #2e2e2e;
}

.emotion-5:hover:not(:disabled) {
  background-color: #e6f4ff;
  color: #0a68c1;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-5:active:not(:disabled) {
  background-color: #d5ebff;
  color: #0a68c1;
}

.emotion-5:active:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-5:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-5:disabled svg {
  fill: #c0c0c0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-2 {
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-2.emotion-2 {
  width: 48px;
  height: 48px;
}

<div
    class="emotion-6"
  >
    <button
      aria-label="my custom aria label"
      class="emotion-5"
      data-testid="tab"
      role="tab"
      type="button"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-1"
        >
          <span
            class="emotion-0"
          >
            Tab Label
          </span>
        </div>
        <div
          class="emotion-1"
        >
          <svg
            aria-hidden="true"
            class="emotion-2"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="12"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
